--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,14 +54,15 @@ add_message_files(
     MotorFreqs.msg
 #   Message1.msg
 #   Message2.msg
- )
+)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+add_service_files(
+    FILES
+    TimedMotion.srv
 #   Service1.srv
 #   Service2.srv
-# )
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
